# fastapi-mastering

./: .env.example  .gitignore  Dockerfile  README.md  dev.db  docker-compose.yml  local.db  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0b446e005cff_create_table_post_comment.py  1c5fb24a3a7c_create_table_post_comment.py  2201620c5adc_create_table_post_comment.py  24ab2b4904fa_added_column_confirmed_into_table_users.py  4ced04a079e3_add_table_like.py  7a6fb7c5039a_added_foreignkey_user_id.py  f6fa61e85818_added_table_user.py
app/: main.py
app/core/: config.py  config_loader.py  config_logging.py  database.py  logging_config.py  tasks.py
app/libs/b2/: __init__.py
app/models/: entities.py  orm.py
app/routers/: bucket.py  post.py  tasks.py  user.py
app/tests/: conftest.py
app/tests/routers/: test_bucket.py  test_post.py  test_user.py
