[project]
name = "my-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.123.9",
    "httpx>=0.28.1",
    "logtail-python>=0.3.4",
    "loguru>=0.7.3",
    "mypy>=1.19.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]
